Fixed contact form validation and added new features

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,11 +61,14 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a href=" https://x.com/Siibin___?t=0SjdKFqiWDV5I68myboJdQ&s=08" target="_blank"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/share/1ACQL6ouUV/" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/siibin__?igsh=MTltMXFjbG5vc3Y4Mw==" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/sibin-poulose-a3898026b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="bi bi-linkedin"></i></a>
-      </div>
+      <a href=" https://x.com/Siibin___?t=0SjdKFqiWDV5I68myboJdQ&s=08" target="_blank"><i
+          class="bi bi-twitter-x"></i></a>
+      <a href="https://www.facebook.com/share/1ACQL6ouUV/" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/siibin__?igsh=MTltMXFjbG5vc3Y4Mw==" target="_blank"><i
+          class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/sibin-poulose-a3898026b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+        target="_blank"><i class="bi bi-linkedin"></i></a>
+    </div>
 
     </div>
   </header>
@@ -76,9 +81,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Looking for a dedicated MERN Stack Developer to bring your ideas to life? 
-      I specialize in creating modern, scalable, and user-friendly applications. 
-      Reach out and let’s build something great together!</p>
+        <p>Looking for a dedicated MERN Stack Developer to bring your ideas to life?
+          I specialize in creating modern, scalable, and user-friendly applications.
+          Reach out and let’s build something great together!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -111,15 +116,11 @@
                   <p>sibinpoulose2003@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
-              <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15708.459220888373!2d76.44693587459315!3d10.171322783433657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07fd4481e5fc41%3A0xfc5296f7a6ed7e70!2sHilary%20VT%2C%20Vadakkeveettilan%20House%2C%20Mankuzhy%2C%20Kalady%20Cheranalloor%2C%20Cheranalloor%2C%20Edavoor%2C%20Kerala%20683544%2C%20India!5e0!3m2!1sen!2sus!4v1758556893792!5m2!1sen!2sus" 
-              width="100%" 
-              height="270" 
-              style="border:0;" 
-              allowfullscreen="" 
-              loading="lazy" 
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15708.459220888373!2d76.44693587459315!3d10.171322783433657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07fd4481e5fc41%3A0xfc5296f7a6ed7e70!2sHilary%20VT%2C%20Vadakkeveettilan%20House%2C%20Mankuzhy%2C%20Kalady%20Cheranalloor%2C%20Cheranalloor%2C%20Edavoor%2C%20Kerala%20683544%2C%20India!5e0!3m2!1sen!2sus!4v1758556893792!5m2!1sen!2sus"
+                width="100%" height="270" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
 
 
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
@@ -127,27 +128,34 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/mldpbqvv" method="post" class="email-form" data-aos="fade-up"
+              data-aos-delay="200" onsubmit="return validate()">
               <div class="row gy-4">
 
                 <div class="col-md-6">
                   <label for="name-field" class="pb-2">Your Name</label>
-                  <input type="text" name="name" id="name-field" class="form-control" required="">
+                  <input type="text" name="name" id="name-field" class="form-control" >
+                  <p id="nameerror" style="font-size: 14px; color: red;"></p>
                 </div>
 
                 <div class="col-md-6">
                   <label for="email-field" class="pb-2">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email-field" required="">
+                  <input type="email" class="form-control" name="email" id="email-field" required>
+                  <p id="emailerror" style="font-size: 14px; color: red;" ></p>
                 </div>
 
                 <div class="col-md-12">
                   <label for="subject-field" class="pb-2">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
+                  <input type="text" class="form-control" name="subject" id="subject-field" >
+                  <p id="subjecterror" style="font-size: 14px; color: red;"></p>
+
                 </div>
 
                 <div class="col-md-12">
                   <label for="message-field" class="pb-2">Message</label>
-                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
+                  <textarea class="form-control" name="message" rows="10" id="message-field" >
+                  </textarea>
+                  <p id="messageerror" style="font-size: 14px; color: red;"></p>
                 </div>
 
                 <div class="col-md-12 text-center">
@@ -155,7 +163,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit" style="background-color: rgb(36, 225, 36); color: white;">Send Message</button>
                 </div>
 
               </div>
@@ -174,44 +182,42 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sibin</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sibin</strong> <span>All Rights Reserved<br></span>
+        </p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=" https://x.com/Siibin___?t=0SjdKFqiWDV5I68myboJdQ&s=08" target="_blank"><i class="bi bi-twitter-x"></i></a>
+        <a href=" https://x.com/Siibin___?t=0SjdKFqiWDV5I68myboJdQ&s=08" target="_blank"><i
+            class="bi bi-twitter-x"></i></a>
         <a href="https://www.facebook.com/share/1ACQL6ouUV/" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/siibin__?igsh=MTltMXFjbG5vc3Y4Mw==" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/sibin-poulose-a3898026b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/siibin__?igsh=MTltMXFjbG5vc3Y4Mw==" target="_blank"><i
+            class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/sibin-poulose-a3898026b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+          target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
+          href=“https://themewagon.com>ThemeWagon
       </div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+  <script src="assets/vendor/aos/aos.js" defer></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
 
 </body>
 
