--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/sibindp.jpg" class="img-fluid" alt="">
+            <img src="assets/img/sibindp.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>MERN Stack Developer</h2>
