Updated contact page with new Formspree form

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formspree.io/f/mldpbqvv" method="post" class="email-form" data-aos="fade-up"
+            <form action="https://formspree.io/f/manpdzpy" method="post" class="email-form" data-aos="fade-up"
               data-aos-delay="200" onsubmit="return validate()">
               <div class="row gy-4">
 
